audit refactoring